# market-intel

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/pools/: ai_energy_map_2026-05-17.md  ai_energy_pool_2026-05-19.csv
docs/: DEVELOPER_CONTEXT.md  LIVERMORE_WORKFLOW_INTEGRATION.md  data-model.md  design-review.md  design.md  handoff.md  product.md  requirements.md  review.md
examples/: a_share_universe.csv.example  holdings.csv.example  holdings.example.json  quotes.csv.example  quotes.example.json  research_notes.csv.example
scripts/: privacy_scan.py
src/market_intel/: cli.py
src/market_intel/core/: __init__.py  agent.py  brief.py  coverage.py  csv_importer.py  daily.py  fixtures.py  focus.py  holdings.py  html_report.py  journal.py  json_output.py  map_view.py  models.py  normalize.py  pool_edit.py  pool_loader.py  portfolio.py  review.py  runtime.py  scan.py  scoring.py  server.py  status.py  symbols.py  sync.py  text_report.py  tradegov.py  trading_calendar.py  validation.py  watchlist.py
src/market_intel/fixtures/: mock_holdings.json  mock_quotes.json
tests/: conftest.py  test_agent.py  test_brief_and_files.py  test_cli_pool.py  test_csv_importer.py  test_daily.py  test_e2e.py  test_focus.py  test_holdings.py  test_hotspots.py  test_html_report.py  test_journal.py  test_map.py  test_no_trading_advice.py  test_pool_edit.py  test_pool_loader.py  test_portfolio.py  test_privacy_scan.py  test_review.py  test_scan.py  test_server.py  test_status.py  test_sync.py  test_validation.py  test_watchlist.py
